--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>City Engine Complete</title>
+<title>City Engine Stable</title>
 <style>
-body { margin:0; overflow:hidden; background:#87ceeb; font-family:sans-serif; }
+body { margin:0; overflow:hidden; font-family:sans-serif; }
 
-/* START SCREEN */
 #startScreen{
 position:absolute;
 width:100%;
@@ -20,7 +19,6 @@ color:white;
 z-index:10;
 }
 
-/* JOYSTICK */
 #joystick{
 position:absolute;
 bottom:40px;
@@ -31,6 +29,7 @@ background:rgba(0,0,0,0.3);
 border-radius:50%;
 touch-action:none;
 }
+
 #stick{
 position:absolute;
 left:40px;
@@ -46,12 +45,8 @@ border-radius:50%;
 
 <div id="startScreen">
 <h1>City Game</h1>
-<input id="nameInput" placeholder="Masukkan Nama..." 
-style="padding:10px;font-size:18px;border-radius:5px;border:none;">
-<button onclick="startGame()" 
-style="margin-top:15px;padding:10px 20px;font-size:18px;border:none;border-radius:5px;cursor:pointer;">
-Mulai
-</button>
+<input id="nameInput" placeholder="Masukkan Nama..." style="padding:10px;font-size:18px;">
+<button onclick="startGame()" style="margin-top:10px;padding:10px;">Mulai</button>
 </div>
 
 <div id="joystick"><div id="stick"></div></div>
@@ -59,7 +54,7 @@ Mulai
 <script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
 <script>
 
-/* ================= BASIC ================= */
+/* ===== SCENE ===== */
 const scene = new THREE.Scene();
 scene.background = new THREE.Color(0x87ceeb);
 
@@ -70,34 +65,36 @@ document.body.appendChild(renderer.domElement);
 
 scene.add(new THREE.HemisphereLight(0xffffff,0x444444,1.2));
 
-/* ================= GROUND ================= */
+/* ===== GROUND ===== */
 const ground = new THREE.Mesh(
 new THREE.PlaneGeometry(1000,1000),
 new THREE.MeshStandardMaterial({color:0x2e8b57})
 );
-ground.rotation.x = -Math.PI/2;
+ground.rotation.x=-Math.PI/2;
 scene.add(ground);
 
-/* ================= PLAYER ================= */
-const player = new THREE.Group();
+/* ===== PLAYER ===== */
+const player=new THREE.Group();
 scene.add(player);
 
-const body = new THREE.Mesh(
+player.position.set(0,0,0); // spawn aman
+
+const body=new THREE.Mesh(
 new THREE.BoxGeometry(0.7,1.6,0.4),
 new THREE.MeshStandardMaterial({color:0x0099ff})
 );
-body.position.y = 1.6;
+body.position.y=1.6;
 player.add(body);
 
-const head = new THREE.Mesh(
+const head=new THREE.Mesh(
 new THREE.BoxGeometry(0.6,0.6,0.6),
 new THREE.MeshStandardMaterial({color:0xffcc99})
 );
-head.position.y = 2.6;
+head.position.y=2.6;
 player.add(head);
 
 function limb(x,y){
-const l = new THREE.Mesh(
+const l=new THREE.Mesh(
 new THREE.BoxGeometry(0.25,1,0.25),
 new THREE.MeshStandardMaterial({color:0x222222})
 );
@@ -105,22 +102,24 @@ l.position.set(x,y,0);
 player.add(l);
 return l;
 }
-const armL = limb(-0.6,1.8);
-const armR = limb(0.6,1.8);
-const legL = limb(-0.25,0.5);
-const legR = limb(0.25,0.5);
 
-/* ================= NAME LABEL ================= */
-let nameLabel;
+const armL=limb(-0.6,1.8);
+const armR=limb(0.6,1.8);
+const legL=limb(-0.25,0.5);
+const legR=limb(0.25,0.5);
+
+/* ===== NAME ===== */
+let nameLabel=null;
+
 function createNameLabel(text){
 const canvas=document.createElement("canvas");
 const ctx=canvas.getContext("2d");
-canvas.width=256; canvas.height=64;
+canvas.width=256;
+canvas.height=64;
 ctx.fillStyle="white";
 ctx.font="28px Arial";
 ctx.textAlign="center";
 ctx.fillText(text,128,40);
-
 const texture=new THREE.CanvasTexture(canvas);
 const material=new THREE.SpriteMaterial({map:texture});
 const sprite=new THREE.Sprite(material);
@@ -132,47 +131,31 @@ return sprite;
 
 function startGame(){
 const name=document.getElementById("nameInput").value.trim();
-if(name==="") return alert("Nama harus diisi!");
+if(name===""){ alert("Nama harus diisi!"); return; }
 nameLabel=createNameLabel(name);
 document.getElementById("startScreen").style.display="none";
 }
 
-/* ================= WORLD ================= */
+/* ===== WORLD ===== */
 const obstacles=[];
-for(let x=-200;x<=200;x+=20){
-for(let z=-200;z<=200;z+=20){
-if(Math.random()>0.3){
-const isHouse=Math.random()>0.7;
-const h=isHouse?8:10+Math.random()*30;
-const color=new THREE.Color().setHSL(Math.random(),0.5,0.5);
+for(let i=0;i<150;i++){
+const x=(Math.random()-0.5)*400;
+const z=(Math.random()-0.5)*400;
 
+if(Math.abs(x)<20 && Math.abs(z)<20) continue; // kosongkan area spawn
+
+const h=10+Math.random()*30;
 const building=new THREE.Mesh(
 new THREE.BoxGeometry(12,h,12),
-new THREE.MeshStandardMaterial({color:color})
+new THREE.MeshStandardMaterial({color:new THREE.Color().setHSL(Math.random(),0.5,0.5)})
 );
 building.position.set(x,h/2,z);
 scene.add(building);
+
 obstacles.push(new THREE.Box3().setFromObject(building));
-
-if(isHouse){
-const roof=new THREE.Mesh(
-new THREE.ConeGeometry(9,4,4),
-new THREE.MeshStandardMaterial({color:0xaa0000})
-);
-roof.position.set(x,h+2,z);
-roof.rotation.y=Math.PI/4;
-scene.add(roof);
-}
-}
-}
 }
 
-/* ================= PHYSICS ================= */
-let velocityY=0;
-const gravity=-0.015;
-let onGround=true;
-
-/* ================= INPUT ================= */
+/* ===== INPUT ===== */
 let move={f:0,r:0};
 let sprint=false;
 
@@ -184,61 +167,34 @@ if(e.key==="d") move.r=1;
 if(e.key==="Shift") sprint=true;
 if(e.key===" ") jump();
 });
+
 document.addEventListener("keyup",e=>{
 if(e.key==="w"||e.key==="s") move.f=0;
 if(e.key==="a"||e.key==="d") move.r=0;
 if(e.key==="Shift") sprint=false;
 });
 
-/* ================= JOYSTICK ================= */
-const joy=document.getElementById("joystick");
-const stick=document.getElementById("stick");
-let drag=false;
-
-joy.addEventListener("touchstart",()=>drag=true);
-joy.addEventListener("touchend",()=>{
-drag=false; move.f=0; move.r=0;
-stick.style.left="40px"; stick.style.top="40px";
-});
-joy.addEventListener("touchmove",e=>{
-if(!drag) return;
-const rect=joy.getBoundingClientRect();
-let x=e.touches[0].clientX-rect.left-60;
-let y=e.touches[0].clientY-rect.top-60;
-const max=40;
-x=Math.max(-max,Math.min(max,x));
-y=Math.max(-max,Math.min(max,y));
-stick.style.left=(60+x-20)+"px";
-stick.style.top=(60+y-20)+"px";
-move.r=x/max;
-move.f=-y/max;
-});
-
-/* ================= CAMERA CONTROL ================= */
+/* ===== CAMERA (POINTER LOCK) ===== */
 let yaw=0;
 let pitch=0;
-let mouseDown=false;
 
-renderer.domElement.addEventListener("mousedown",()=>mouseDown=true);
-renderer.domElement.addEventListener("mouseup",()=>mouseDown=false);
-renderer.domElement.addEventListener("mousemove",e=>{
-if(mouseDown){
-yaw-=e.movementX*0.003;
-pitch-=e.movementY*0.003;
+renderer.domElement.addEventListener("click",()=>{
+renderer.domElement.requestPointerLock();
+});
+
+document.addEventListener("mousemove",e=>{
+if(document.pointerLockElement===renderer.domElement){
+yaw-=e.movementX*0.002;
+pitch-=e.movementY*0.002;
 pitch=Math.max(-1,Math.min(1,pitch));
 }
 });
 
-/* ================= COLLISION ================= */
-function isColliding(pos){
-const playerBox=new THREE.Box3(
-new THREE.Vector3(pos.x-0.5,pos.y,pos.z-0.5),
-new THREE.Vector3(pos.x+0.5,pos.y+3,pos.z+0.5)
-);
-return obstacles.some(o=>playerBox.intersectsBox(o));
-}
+/* ===== PHYSICS ===== */
+let velocityY=0;
+const gravity=-0.015;
+let onGround=true;
 
-/* ================= JUMP ================= */
 function jump(){
 if(onGround){
 velocityY=0.3;
@@ -246,7 +202,16 @@ onGround=false;
 }
 }
 
-/* ================= LOOP ================= */
+/* ===== COLLISION ===== */
+function isColliding(pos){
+const box=new THREE.Box3(
+new THREE.Vector3(pos.x-0.5,pos.y,pos.z-0.5),
+new THREE.Vector3(pos.x+0.5,pos.y+3,pos.z+0.5)
+);
+return obstacles.some(o=>box.intersectsBox(o));
+}
+
+/* ===== LOOP ===== */
 let walk=0;
 
 function animate(){
@@ -264,6 +229,7 @@ if(!isColliding(newPos)){
 player.position.x=newPos.x;
 player.position.z=newPos.z;
 }
+
 walk+=0.25;
 armL.rotation.x=Math.sin(walk)*0.8;
 armR.rotation.x=-Math.sin(walk)*0.8;
@@ -284,21 +250,16 @@ onGround=true;
 
 player.rotation.y=yaw;
 
-/* Camera Third Person */
+/* Camera */
 const camDist=6;
-const camHeight=3;
-
-const camX=player.position.x - Math.sin(yaw)*camDist;
-const camZ=player.position.z - Math.cos(yaw)*camDist;
-const camY=player.position.y + camHeight + pitch*4;
-
-camera.position.set(camX,camY,camZ);
+camera.position.set(
+player.position.x - Math.sin(yaw)*camDist,
+player.position.y + 3 + pitch*4,
+player.position.z - Math.cos(yaw)*camDist
+);
 camera.lookAt(player.position.x,player.position.y+2,player.position.z);
 
-/* Name always face camera */
-if(nameLabel){
-nameLabel.lookAt(camera.position);
-}
+if(nameLabel) nameLabel.lookAt(camera.position);
 
 renderer.render(scene,camera);
 }
